[package]
name = "chip8"
version = "0.1.0"
authors = ["JPDye <jpzh.dye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.0"

pixels = "0.2.0"
rand = "0.8.0"
winit = "0.24.0"
winit_input_helper = "0.9.0"
